[package]
name = "near-contract-standards-icebear"
version = "0.0.1"
authors = ["baoanh1310"]
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/baoanh1310/near-sdk-rs"
homepage = "https://github.com/baoanh1310/near-sdk-rs"
documentation = "https://github.com/baoanh1310/near-sdk-rs"
description = """
NEAR smart contracts standard library with NFT minting without refund.
"""

[dependencies]
near-sdk = { path = "../near-sdk", version = "~4.1.1", default-features = false, features = ["legacy"] }
serde = "1"
serde_json = "1"
schemars = "0.8"

[features]
default = ["abi"]
abi = ["near-sdk/abi"]
